--- a/src/frontend/index.html
+++ b/src/frontend/index.html
@@ -5,16 +5,16 @@
 		<script src="cheeves.js"></script>
 	</head>
 	<body>
-	<button id="button">Click me to test (DONE)</Button>
+	<button id="button">Click me to test ONE</Button>
 		<br>
-		<button id="button2">Click me to test</Button>
+		<button id="button2">Click me to test FIVE</Button>
 
 	<script>
 		$('#button').click(function(event) {
-			cheeves.update("http://127.0.0.1:3000", "wookoouk@gmail.com",4);
+			cheeves.update("http://127.0.0.1:3000", "wookoouk@gmail.com",6);
 		});
 		$('#button2').click(function(event) {
-			cheeves.update("http://127.0.0.1:3000", "wookoouk@gmail.com",5);
+			cheeves.update("http://127.0.0.1:3000", "wookoouk@gmail.com",7);
 		});
 		</script>
 
